--- a/publications.html
+++ b/publications.html
@@ -110,7 +110,7 @@
          <li> Yanfu Zhang<font color=red> * </font>,  <strong>Shangqian Gao<font color=red> * </font></strong>, Heng Huang, <a class="a:link" href="https://openaccess.thecvf.com/content/ICCV2021/papers/Zhang_Exploration_and_Estimation_for_Model_Compression_ICCV_2021_paper.pdf" target=_blank><font color="#154360">Exploration and Estimation for Model Compression</font></a>. ICCV 2021. </li>
 		 <li> Chao Li<font color=red> * </font>,  <strong>Shangqian Gao<font color=red> * </font></strong>, Cheng Deng, Wei Liu, Heng Huang, <a class="a:link" href="https://openaccess.thecvf.com/content/ICCV2021/papers/Li_Adversarial_Attack_on_Deep_Cross-Modal_Hamming_Retrieval_ICCV_2021_paper.pdf" target=_blank><font color="#154360">Adversarial Attack on Deep Cross-Modal Hamming Retrieval</font></a>. ICCV 2021. </li>
 		 <li> <strong>Shangqian Gao</strong>, Feihu Huang, Weidong Cai, Heng Huang, <a class="a:link" href="https://openaccess.thecvf.com/content/CVPR2021/papers/Gao_Network_Pruning_via_Performance_Maximization_CVPR_2021_paper.pdf" target=_blank><font color="#154360">Network Pruning via Performance Maximization</font></a>. CVPR 2021. </li>
-		 <li> Bin Gu, Xiyuan Wei,  <strong>Shangqian Gao</strong>, Ziran Xiong, Cheng Deng, Heng Huang, <a class="a:link" href="https://www.jmlr.org/papers/v22/20-611.html" target=_blank><font color="#154360">Black-Box Reductions for Zeroth-Order Gradient Algorithms to Achieve Lower Query Complexity.</font></a>. Journal of Machine Learning Research (JMLR). </li>
+		 <li> Bin Gu, Xiyuan Wei,  <strong>Shangqian Gao</strong>, Ziran Xiong, Cheng Deng, Heng Huang, <a class="a:link" href="https://www.jmlr.org/papers/v22/20-611.html" target=_blank><font color="#154360">Black-Box Reductions for Zeroth-Order Gradient Algorithms to Achieve Lower Query Complexity</font></a>. Journal of Machine Learning Research (JMLR). </li>
 		 
 		</ol>
         </h4>
@@ -119,14 +119,14 @@
         <ol>
 		
 		<li> <strong>Shangqian Gao</strong>, Feihu Huang, Jian Pei, Heng Huang, <a class="a:link" href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Gao_Discrete_Model_Compression_With_Resource_Constraint_for_Deep_Neural_Networks_CVPR_2020_paper.pdf" target=_blank><font color="#154360">Discrete Model Compression With Resource Constraint for Deep Neural Networks</font></a>. CVPR 2020. </li>
-		<li> Feihu Huang,  <strong>Shangqian Gao</strong>, Jian Pei, Heng Huang, <a class="a:link" href="https://arxiv.org/pdf/2007.06680.pdf" target=_blank><font color="#154360">Momentum-Based Policy Gradient Methods.</font></a>. ICML 2020. </li>
+		<li> Feihu Huang,  <strong>Shangqian Gao</strong>, Jian Pei, Heng Huang, <a class="a:link" href="https://arxiv.org/pdf/2007.06680.pdf" target=_blank><font color="#154360">Momentum-Based Policy Gradient Methods</font></a>. ICML 2020. </li>
 		</ol>
         </h4>
 		<h1><font color="#154360">2019</font></h1>
 		<h4>
         <ol>
-		<li> Chao Li</font>,  <strong>Shangqian Gao</font></strong>, Cheng Deng, Wei Liu, Heng Huang, <a class="a:link" href="https://proceedings.neurips.cc/paper/2019/hash/d384dec9f5f7a64a36b5c8f03b8a6d92-Abstract.html" target=_blank><font color="#154360">Cross-Modal Learning with Adversarial Samples.</font></a>. NeurIPS 2019. </li>
-		<li> Feihu Huang,  <strong>Shangqian Gao</strong>, Songcan Chen, Heng Huang, <a class="a:link" href="https://arxiv.org/pdf/2007.06680.pdf" target=_blank><font color="#154360">Zeroth-Order Stochastic Alternating Direction Method of Multipliers for Nonconvex Nonsmooth Optimization..</font></a>. IJCAI 2019. </li>
+		<li> Chao Li</font>,  <strong>Shangqian Gao</font></strong>, Cheng Deng, Wei Liu, Heng Huang, <a class="a:link" href="https://proceedings.neurips.cc/paper/2019/hash/d384dec9f5f7a64a36b5c8f03b8a6d92-Abstract.html" target=_blank><font color="#154360">Cross-Modal Learning with Adversarial Samples</font></a>. NeurIPS 2019. </li>
+		<li> Feihu Huang,  <strong>Shangqian Gao</strong>, Songcan Chen, Heng Huang, <a class="a:link" href="https://arxiv.org/pdf/2007.06680.pdf" target=_blank><font color="#154360">Zeroth-Order Stochastic Alternating Direction Method of Multipliers for Nonconvex Nonsmooth Optimization</font></a>. IJCAI 2019. </li>
 		<li> <strong>Shangqian Gao</strong>, Cheng Deng, Heng Huang, <a class="a:link" href="https://openaccess.thecvf.com/content_CVPR_2019/papers/Gao_Cross_Domain_Model_Compression_by_Structurally_Weight_Sharing_CVPR_2019_paper.pdf" target=_blank><font color="#154360">Cross Domain Model Compression with Structured Weight Sharing</font></a>. CVPR 2019. </li>
 		</ol>
         </h4>
