--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul id="menu">
               <li><a href="index.html"><font color="#000000">About Me</font></a></li>
               <li><a href="publications.html"><font color="#000000">Publications</font></a></li>
-              <li><a href="research.html"><font color="#000000">Research</font></a></li>
+              <!-- <li><a href="research.html"><font color="#000000">Research</font></a></li>-->
               <li><a href="experience.html"><font color="#000000">Experience</font></a></li>
               <li><a href="service.html"><font color="#000000">Service</font></a></li>
             </ul>
@@ -39,7 +39,7 @@
         <!-- insert your sidebar items here -->
         <div align="center"> 
           <div class="trig1" align="center"> 
-            <img class="trig" src="style/zeyu.jpeg">
+            <img class="trig" src="style/shangqian.jpg">
           </div>
         </div>
 
@@ -79,7 +79,7 @@
         <h1><strong><font color="#154360">About Me</font></strong></h1>
         <h4>
         <p>	
-		I am now a final-year Ph.D. student in ECE, Swanson School of Engineering, University of Pittsburgh, supervised by Prof. Heng Huang. Prior to that, I obtained my M.S. degree in Computer System Engineering at Northeastern University in 2017, and I obtained my B.S. degree in Electronic Engineering at Xidian University in 2015. 
+		I am now a fifth-year Ph.D. student in ECE, Swanson School of Engineering, University of Pittsburgh, supervised by Prof. Heng Huang. Prior to that, I obtained my M.S. degree in Computer System Engineering at Northeastern University in 2017, and I obtained my B.S. degree in Electronic Engineering at Xidian University in 2015. 
 	</p>
 
 
@@ -133,7 +133,7 @@
 		\textbf{Shangqian Gao}, Cheng Deng and Heng Huang, ``Cross Domain Model Compression with Structured Weight Sharing."
 		\textbf{Shangqian Gao*}, Yu Kong*, Bin Sun, and Yun Fu. ``Action prediction from videos via memorizing hard-to-predict samples." AAAI 2018
 		-->
-		 <li> <strong>Shangqian Gao</strong> Feihu Huang, Yanfu Zhang, Heng Huang, Disentangled Differentiable Network Pruning. ECCV 2022. (to appear) </li>
+		 <li> <strong>Shangqian Gao</strong>, Feihu Huang, Yanfu Zhang, Heng Huang, Disentangled Differentiable Network Pruning. ECCV 2022. (to appear) </li>
 		 <li> Alireza Ganjdanesh<font color=red> * </font>, <strong>Shangqian Gao <font color=red> * </font> </strong> Heng Huang, Interpretations Steered Network Pruning via Amortized Inferred Saliency Maps. ECCV 2022. (to appear) </li>
 		 <li> Feihu Huang<font color=red> * </font>,  <strong>Shangqian Gao<font color=red> * </font></strong>, Heng Huang, <a class="a:link" href="https://openreview.net/pdf?id=ZU-zFnTum1N" target=_blank><font color="#154360">Bregman Gradient Policy Optimization</font></a>. ICLR 2022. </li>
 		 <li> Yanfu Zhang<font color=red> * </font>,  <strong>Shangqian Gao<font color=red> * </font></strong>, Heng Huang, <a class="a:link" href="https://openaccess.thecvf.com/content/ICCV2021/papers/Zhang_Exploration_and_Estimation_for_Model_Compression_ICCV_2021_paper.pdf" target=_blank><font color="#154360">Exploration and Estimation for Model Compression</font></a>. ICCV 2021. </li>
@@ -141,7 +141,8 @@
 		 <li> <strong>Shangqian Gao</strong>, Feihu Huang, Weidong Cai, Heng Huang, <a class="a:link" href="https://openaccess.thecvf.com/content/CVPR2021/papers/Gao_Network_Pruning_via_Performance_Maximization_CVPR_2021_paper.pdf" target=_blank><font color="#154360">Network Pruning via Performance Maximization</font></a>. CVPR 2021. </li>
 		 <li> <strong>Shangqian Gao</strong>, Feihu Huang, Jian Pei, Heng Huang, <a class="a:link" href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Gao_Discrete_Model_Compression_With_Resource_Constraint_for_Deep_Neural_Networks_CVPR_2020_paper.pdf" target=_blank><font color="#154360">Discrete Model Compression With Resource Constraint for Deep Neural Networks</font></a>. CVPR 2020. </li>
 		 <li> <strong>Shangqian Gao</strong>, Cheng Deng, Heng Huang, <a class="a:link" href="https://openaccess.thecvf.com/content_CVPR_2019/papers/Gao_Cross_Domain_Model_Compression_by_Structurally_Weight_Sharing_CVPR_2019_paper.pdf" target=_blank><font color="#154360">Cross Domain Model Compression with Structured Weight Sharing</font></a>. CVPR 2019. </li>
-		 <li> Yu Kong<font color=red> * </font>, <strong>Shangqian Gao<font color=red> * </font></strong>,Bin Sun, and Yun Fu, <a class="a:link" href="https://ojs.aaai.org/index.php/AAAI/article/view/12324" target=_blank><font color="#154360">Action Prediction from Videos via Memorizing Hard-to-predict Samples</font></a>. AAAI 2018. </li>
+		 <!--<li> Yu Kong<font color=red> * </font>, <strong>Shangqian Gao<font color=red> * </font></strong>,Bin Sun, and Yun Fu, <a class="a:link" href="https://ojs.aaai.org/index.php/AAAI/article/view/12324" target=_blank><font color="#154360">Action Prediction from Videos via Memorizing Hard-to-predict Samples</font></a>. AAAI 2018. </li>
+		 -->
         </h4>
 		</div>
       </div>
