--- a/publications.html
+++ b/publications.html
@@ -27,7 +27,7 @@
             <ul id="menu">
               <li><a href="index.html"><font color="#000000">About Me</font></a></li>
               <li><a href="publications.html"><font color="#000000">Publications</font></a></li>
-              <li><a href="research.html"><font color="#000000">Research</font></a></li>
+              <!-- <li><a href="research.html"><font color="#000000">Research</font></a></li>-->
               <li><a href="experience.html"><font color="#000000">Experience</font></a></li>
               <li><a href="service.html"><font color="#000000">Service</font></a></li>
             </ul>
@@ -39,7 +39,7 @@
         <!-- insert your sidebar items here -->
         <div align="center"> 
           <div class="trig1" align="center"> 
-            <img class="trig" src="style/zeyu.jpeg">
+            <img class="trig" src="style/shangqian.jpg">
           </div>
         </div>
 
