--- a/publications.html
+++ b/publications.html
@@ -93,7 +93,7 @@
         <h1><font color="#154360">2022</font></h1>
         <h4>
         <ol>
-          <li> <strong>Shangqian Gao</strong> Feihu Huang, Yanfu Zhang, Heng Huang, Disentangled Differentiable Network Pruning. ECCV 2022. (to appear) </li>
+          <li> <strong>Shangqian Gao</strong>, Feihu Huang, Yanfu Zhang, Heng Huang, Disentangled Differentiable Network Pruning. ECCV 2022. (to appear) </li>
 		 <li> Alireza Ganjdanesh<font color=red> * </font>, <strong>Shangqian Gao <font color=red> * </font> </strong> Heng Huang, Interpretations Steered Network Pruning via Amortized Inferred Saliency Maps. ECCV 2022. (to appear) </li>
 		 <li> Yanfu Zhang, <strong>Shangqian Gao  </strong>, Heng Huang, Recover Fair Deep Classification Models via Altering Pre-trained Structure. ECCV 2022. (to appear) </li>
 		 <li> Yanfu Zhang, <strong>Shangqian Gao  </strong>,  Jian Pei, Heng Huang, Improving Social Network Embedding via New Second-Order Continuous Graph Neural Networks. KDD 2022. (to appear) </li>
