--- a/index.html
+++ b/index.html
@@ -103,9 +103,13 @@
         <h1><strong><font color="#154360">Recent News</font></strong></h1>
         <div id="news">
         <ul>
-        <li> <h4> <strong><font color="#E74C3C">(07/22) Three paper has been accepted by ECCV 2022.</font></strong></h4></li>
-        <li> <h4> <font color="#000000">(05/22) I will be joining Samsung Research America as a Research Intern during summer 2022.</font></h4></li>
-        <li> <h4> <font color="#000000">(05/22) I will be a reviewer for NeurIPS 2022.</font></h4></li>
+		<li> <h4> <font color="#000000">One paper has been accepted by AAAI 2023.</font></h4></li>
+		<li> <h4> <font color="#000000">I will be a reviewer for CVPR 2023.</font></h4></li>
+		<li> <h4> <font color="#000000">I will be a reviewer for ICLR 2023.</font></h4></li>
+		<li> <h4> <font color="#000000">One paper has been accepted by NeurIPS 2023.</font></h4></li>
+        <li> <h4> <font color="#000000">Three paper has been accepted by ECCV 2022.</font></h4></li>
+        <li> <h4> <font color="#000000">I will be joining Samsung Research America as a Research Intern during summer 2022.</font></h4></li>
+        <li> <h4> <font color="#000000">I will be a reviewer for NeurIPS 2022.</font></h4></li>
         <!-- <li> <h4> <font color="#000000">(08/21/20) I will continue working in Amazon as an Applied Scientist Intern during 2020 fall.</font></h4></li>
         <li> <h4> <font color="#000000">(04/03/20) Our work on entity linking based on bio-domain is accepted by ACL'2020.</font></strong></h4></li>
         <li> <h4> <font color="#000000">(03/06/20) I will be joining Amazon as an Applied Scientist Intern during summer 2020.</font></h4></li>
