--- a/index.html
+++ b/index.html
@@ -103,13 +103,14 @@
         <h1><strong><font color="#154360">Recent News</font></strong></h1>
         <div id="news">
         <ul>
-		<li> <h4> <font color="#000000">One paper has been accepted by AAAI 2023.</font></h4></li>
-		<li> <h4> <font color="#000000">I will be a reviewer for CVPR 2023.</font></h4></li>
-		<li> <h4> <font color="#000000">I will be a reviewer for ICLR 2023.</font></h4></li>
-		<li> <h4> <font color="#000000">One paper has been accepted by NeurIPS 2022.</font></h4></li>
-        <li> <h4> <font color="#000000">Three paper has been accepted by ECCV 2022.</font></h4></li>
-        <li> <h4> <font color="#000000">I will be joining Samsung Research America as a Research Intern during summer 2022.</font></h4></li>
-        <li> <h4> <font color="#000000">I will be a reviewer for NeurIPS 2022.</font></h4></li>
+		<li> <h4> <font color="#000000">1/2023, One paper has been accepted by ICLR 2023. One paper has been accepted by PAMI</font></h4></li>
+		<li> <h4> <font color="#000000">11/2022, One paper has been accepted by AAAI 2023.</font></h4></li>
+		<li> <h4> <font color="#000000">9/2022, I will be a reviewer for CVPR 2023.</font></h4></li>
+		<li> <h4> <font color="#000000">9/2022, I will be a reviewer for ICLR 2023.</font></h4></li>
+		<li> <h4> <font color="#000000">9/2022, One paper has been accepted by NeurIPS 2022.</font></h4></li>
+        <li> <h4> <font color="#000000">7/2022, Three paper has been accepted by ECCV 2022.</font></h4></li>
+        <li> <h4> <font color="#000000">5/2022, I will be joining Samsung Research America as a Research Intern during summer 2022.</font></h4></li>
+        <li> <h4> <font color="#000000">5/2022, I will be a reviewer for NeurIPS 2022.</font></h4></li>
         <!-- <li> <h4> <font color="#000000">(08/21/20) I will continue working in Amazon as an Applied Scientist Intern during 2020 fall.</font></h4></li>
         <li> <h4> <font color="#000000">(04/03/20) Our work on entity linking based on bio-domain is accepted by ACL'2020.</font></strong></h4></li>
         <li> <h4> <font color="#000000">(03/06/20) I will be joining Amazon as an Applied Scientist Intern during summer 2020.</font></h4></li>
@@ -122,11 +123,11 @@
         <li>...</li>
         </ul>
         </div>
-		<div id="publications">
+		<!--<div id="publications">
 		<h1><strong><font color="#154360">Selected Publications</font></strong></h1>
 		<p> <h4> <font color=red> * </font> indicates authors with equal contributions. </h4> </p>
 		<h4>
-        <ol>
+        <ol>-->
 		<!--\textbf{Shangqian Gao}, Feihu Huang, Yanfu Zhang, Heng Huang, ``Disentangled Differentiable Network Pruning." ECCV 2022. (to appear)
 		\textbf{Shangqian Gao*}, Alireza Ganjdanesh*,  Heng Huang, ``Interpretations Steered Network Pruning via Amortized Inferred Saliency Maps." ECCV 2022. (to appear)
 		\textbf{Shangqian Gao*}, Feihu Huang*, Heng Huang, ``Bregman Gradient Policy Optimization." ICLR 2022.
@@ -137,7 +138,7 @@
 		\textbf{Shangqian Gao}, Cheng Deng and Heng Huang, ``Cross Domain Model Compression with Structured Weight Sharing."
 		\textbf{Shangqian Gao*}, Yu Kong*, Bin Sun, and Yun Fu. ``Action prediction from videos via memorizing hard-to-predict samples." AAAI 2018
 		-->
-		 <li> <strong>Shangqian Gao</strong>, Feihu Huang, Yanfu Zhang, Heng Huang, Disentangled Differentiable Network Pruning. ECCV 2022. (to appear) </li>
+		 <!--<li> <strong>Shangqian Gao</strong>, Feihu Huang, Yanfu Zhang, Heng Huang, Disentangled Differentiable Network Pruning. ECCV 2022. (to appear) </li>
 		 <li> Alireza Ganjdanesh<font color=red> * </font>, <strong>Shangqian Gao <font color=red> * </font> </strong> Heng Huang, Interpretations Steered Network Pruning via Amortized Inferred Saliency Maps. ECCV 2022. (to appear) </li>
 		 <li> Feihu Huang<font color=red> * </font>,  <strong>Shangqian Gao<font color=red> * </font></strong>, Heng Huang, <a class="a:link" href="https://openreview.net/pdf?id=ZU-zFnTum1N" target=_blank><font color="#154360">Bregman Gradient Policy Optimization</font></a>. ICLR 2022. </li>
 		 <li> Yanfu Zhang<font color=red> * </font>,  <strong>Shangqian Gao<font color=red> * </font></strong>, Heng Huang, <a class="a:link" href="https://openaccess.thecvf.com/content/ICCV2021/papers/Zhang_Exploration_and_Estimation_for_Model_Compression_ICCV_2021_paper.pdf" target=_blank><font color="#154360">Exploration and Estimation for Model Compression</font></a>. ICCV 2021. </li>
@@ -145,10 +146,9 @@
 		 <li> <strong>Shangqian Gao</strong>, Feihu Huang, Weidong Cai, Heng Huang, <a class="a:link" href="https://openaccess.thecvf.com/content/CVPR2021/papers/Gao_Network_Pruning_via_Performance_Maximization_CVPR_2021_paper.pdf" target=_blank><font color="#154360">Network Pruning via Performance Maximization</font></a>. CVPR 2021. </li>
 		 <li> <strong>Shangqian Gao</strong>, Feihu Huang, Jian Pei, Heng Huang, <a class="a:link" href="https://openaccess.thecvf.com/content_CVPR_2020/papers/Gao_Discrete_Model_Compression_With_Resource_Constraint_for_Deep_Neural_Networks_CVPR_2020_paper.pdf" target=_blank><font color="#154360">Discrete Model Compression With Resource Constraint for Deep Neural Networks</font></a>. CVPR 2020. </li>
 		 <li> <strong>Shangqian Gao</strong>, Cheng Deng, Heng Huang, <a class="a:link" href="https://openaccess.thecvf.com/content_CVPR_2019/papers/Gao_Cross_Domain_Model_Compression_by_Structurally_Weight_Sharing_CVPR_2019_paper.pdf" target=_blank><font color="#154360">Cross Domain Model Compression with Structured Weight Sharing</font></a>. CVPR 2019. </li>
-		 <!--<li> Yu Kong<font color=red> * </font>, <strong>Shangqian Gao<font color=red> * </font></strong>,Bin Sun, and Yun Fu, <a class="a:link" href="https://ojs.aaai.org/index.php/AAAI/article/view/12324" target=_blank><font color="#154360">Action Prediction from Videos via Memorizing Hard-to-predict Samples</font></a>. AAAI 2018. </li>
-		 -->
+		 
         </h4>
-		</div>
+		</div>-->
       </div>
       <br />
     </div>
