--- a/publications.html
+++ b/publications.html
@@ -89,14 +89,22 @@
 	Feihu Huang, \textbf{Shangqian Gao}, Songcan Chen, Heng Huang,
     ``Zeroth-Order Stochastic Alternating Direction Method of Multipliers for Nonconvex Nonsmooth Optimization." IJCAI 2019
  -->
-
+		<h1><font color="#154360">2023</font></h1>
+        <h4>
+        <ol>
+         <li> <strong>Shangqian Gao</strong>, Burak Uzkent, Yilin Shen, Heng Huang, Hongxia Jin, Learning to Jointly Share and Prune Weights for Grounding Based Vision and Language Models. ICLR 2023 (to appear). </li>
+		 <li> Feihu Huang,  <strong>Shangqian Gao</strong>, Gradient Descent Ascent for Minimax Problems on Riemannian Manifolds. IEEE Transactions on Pattern Analysis and Machine Intelligence. </li>
+		 <li> Alireza Ganjdanesh, <strong>Shangqian Gao</strong>, Heng Huang, Effconv: Efficient Learning of Kernel Sizes for Convolution Layers of CNN. AAAI 2023 (to appear). </li>
+        </ol>
+        </h4>
+		
         <h1><font color="#154360">2022</font></h1>
         <h4>
         <ol>
-          <li> <strong>Shangqian Gao</strong>, Feihu Huang, Yanfu Zhang, Heng Huang, Disentangled Differentiable Network Pruning. ECCV 2022. (to appear) </li>
+          <li> <strong>Shangqian Gao</strong>, Feihu Huang, Yanfu Zhang, Heng Huang, Disentangled Differentiable Network Pruning. ECCV 2022. </li>
 		 <li> Alireza Ganjdanesh<font color=red> * </font>, <strong>Shangqian Gao <font color=red> * </font> </strong> Heng Huang, Interpretations Steered Network Pruning via Amortized Inferred Saliency Maps. ECCV 2022. (to appear) </li>
-		 <li> Yanfu Zhang, <strong>Shangqian Gao  </strong>, Heng Huang, Recover Fair Deep Classification Models via Altering Pre-trained Structure. ECCV 2022. (to appear) </li>
-		 <li> Yanfu Zhang, <strong>Shangqian Gao  </strong>,  Jian Pei, Heng Huang, Improving Social Network Embedding via New Second-Order Continuous Graph Neural Networks. KDD 2022. (to appear) </li>
+		 <li> Yanfu Zhang, <strong>Shangqian Gao  </strong>, Heng Huang, Recover Fair Deep Classification Models via Altering Pre-trained Structure. ECCV 2022. </li>
+		 <li> Yanfu Zhang, <strong>Shangqian Gao  </strong>,  Jian Pei, Heng Huang, Improving Social Network Embedding via New Second-Order Continuous Graph Neural Networks. KDD 2022. </li>
 		 <li> Feihu Huang<font color=red> * </font>,  <strong>Shangqian Gao<font color=red> * </font></strong>, Heng Huang, <a class="a:link" href="https://openreview.net/pdf?id=ZU-zFnTum1N" target=_blank><font color="#154360">Bregman Gradient Policy Optimization</font></a>. ICLR 2022. </li>
 		 <li> Feihu Huang,  <strong>Shangqian Gao</strong>, Jian Pei, Heng Huang, <a class="a:link" href="https://arxiv.org/pdf/2008.08170.pdf" target=_blank><font color="#154360">Accelerated Zeroth-Order and First-Order Momentum Methods from Mini to Minimax Optimization.</font></a>. Journal of Machine Learning Research (JMLR). </li>
 		 <li> Feihu Huang,  <strong>Shangqian Gao</strong>, <a class="a:link" href="https://www.sciencedirect.com/science/article/abs/pii/S089360802200209X" target=_blank><font color="#154360">Riemannian gradient methods for stochastic composition problems.</font></a>. Neural Networks. </li>
