--- a/publications.html
+++ b/publications.html
@@ -102,7 +102,7 @@
         <h4>
         <ol>
           <li> <strong>Shangqian Gao</strong>, Feihu Huang, Yanfu Zhang, Heng Huang, Disentangled Differentiable Network Pruning. ECCV 2022. </li>
-		 <li> Alireza Ganjdanesh<font color=red> * </font>, <strong>Shangqian Gao <font color=red> * </font> </strong> Heng Huang, Interpretations Steered Network Pruning via Amortized Inferred Saliency Maps. ECCV 2022. (to appear) </li>
+		 <li> Alireza Ganjdanesh<font color=red> * </font>, <strong>Shangqian Gao <font color=red> * </font> </strong> Heng Huang, Interpretations Steered Network Pruning via Amortized Inferred Saliency Maps. ECCV 2022. </li>
 		 <li> Yanfu Zhang, <strong>Shangqian Gao  </strong>, Heng Huang, Recover Fair Deep Classification Models via Altering Pre-trained Structure. ECCV 2022. </li>
 		 <li> Yanfu Zhang, <strong>Shangqian Gao  </strong>,  Jian Pei, Heng Huang, Improving Social Network Embedding via New Second-Order Continuous Graph Neural Networks. KDD 2022. </li>
 		 <li> Feihu Huang<font color=red> * </font>,  <strong>Shangqian Gao<font color=red> * </font></strong>, Heng Huang, <a class="a:link" href="https://openreview.net/pdf?id=ZU-zFnTum1N" target=_blank><font color="#154360">Bregman Gradient Policy Optimization</font></a>. ICLR 2022. </li>
