--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <h1><strong><font color="#154360">Recent News</font></strong></h1>
         <div id="news">
         <ul>
-		<li> <h4> <font color="#000000">1/2023, One paper has been accepted by ICLR 2023. One paper has been accepted by PAMI</font></h4></li>
+		<li> <h4> <font color="#000000">1/2023, One paper has been accepted by ICLR 2023. One paper has been accepted by PAMI.</font></h4></li>
 		<li> <h4> <font color="#000000">11/2022, One paper has been accepted by AAAI 2023.</font></h4></li>
 		<li> <h4> <font color="#000000">9/2022, I will be a reviewer for CVPR 2023.</font></h4></li>
 		<li> <h4> <font color="#000000">9/2022, I will be a reviewer for ICLR 2023.</font></h4></li>
